<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Sqlite Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>

    <string name="save">Save</string>
    <string name="empty_field">Empty Field</string>
    <string name="retrieve">Retrieve</string>
    <string name="id">id</string>



</resources>
