<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/material_deep_teal_500"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ContactDetailFormActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:hint="@string/name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:id="@+id/etAge"
        android:hint="@string/age"
        android:layout_below="@+id/etName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:layout_alignRight="@+id/etName"
        android:layout_alignEnd="@+id/etName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etHeight"
        android:hint="@string/height"
        android:layout_below="@+id/etAge"
        android:inputType="numberDecimal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:layout_alignRight="@+id/etAge"
        android:layout_alignEnd="@+id/etAge" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etWeight"
        android:hint="@string/weight"
        android:layout_below="@+id/etHeight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"
        android:layout_marginTop="42dp"
        android:layout_alignRight="@+id/etHeight"
        android:layout_alignEnd="@+id/etHeight" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_below="@+id/etWeight"
        android:layout_alignParentLeft="true"
        android:background="@color/orange"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve"
        android:background="@color/orange"
        android:id="@+id/btnRetrieve"
        android:layout_alignTop="@+id/btnSave"
        android:layout_alignRight="@+id/etWeight"
        android:layout_alignEnd="@+id/etWeight" />
</RelativeLayout>
